syntax = "proto3";
package NetProto.Game;
import "ShareData.proto";

//选人界面，请求所有角色信息
message packet_cs_request_AllRoleInfo
{
	uint32 nAccountId = 1;
}

message packet_sc_request_AllRoleInfo_Result
{
	uint32 nErrorCode = 1;
	repeated NetProto.ShareData.packet_data_SelectRole_RoleInfo mRoleList = 2;
}

//选人界面，创建角色
message packet_cs_request_CreateRole
{
	uint32 nAccountId = 1;
	string Name = 2;
	uint32 Gender = 3;
	uint32 Class = 4;
}

message packet_sc_request_CreateRole_Result
{
	uint32 nErrorCode = 1;
	repeated NetProto.ShareData.packet_data_SelectRole_RoleInfo mRoleList = 2;
}

//选人界面， 删除角色
message packet_cs_request_DeleteRole
{
	uint32 nPlayerId = 1;
}

message packet_sc_request_DeleteRole_Result
{
	uint32 nErrorCode = 1;
	repeated NetProto.ShareData.packet_data_SelectRole_RoleInfo mRoleList = 2;
}