syntax = "proto3";
package Internet.NetProtocols.Login;

//------------------------------------------- 逻辑 --------------------------------------------
message packet_cs_Login
{
	string account = 1;
	string password = 2;
	string nLoginType = 3;
}

message packet_sc_Login_Result
{
	uint32 nErrorCode = 1;
	string gateServerIp = 2;
	uint32 port = 3;
}